desafio2 - Improve swagger documentation
